// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match component snapshot 1`] = `
<main>
  <CategoryMenu />
  <Connect(AsideEvents) />
  <Switch>
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(NextLaunchesContainer)",
          "type": [Function],
        }
      }
      exact={true}
      path="/"
    />
    <Route
      exact={true}
      path="/about/:category"
      render={[Function]}
    />
    <Route
      component={[Function]}
    />
  </Switch>
</main>
`;

exports[`App should render error element 1`] = `
<section
  className="app-loading"
>
  <h2
    className="errored"
  >
    Failed to Fetch
  </h2>
</section>
`;

exports[`App should render loading element 1`] = `
<section
  className="app-loading"
>
  <article>
    <img
      alt="loading gif"
      src="rocket-launch.gif"
    />
    <h2>
      Loading...
    </h2>
  </article>
</section>
`;
